# Hash-function-comparator

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/hfc/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/hfc/: ITimeMeterHashFunctionCppInterface.aidl  ITimeMeterHashFunctionInterface.aidl
app/src/main/cpp/: CMakeLists.txt  CalculateHashFunction.cpp  CalculateHashFunction.h  CalculateTimeHashFunction.cpp  CalculateTimeHashFunction.h  Converter.cpp  Converter.h  Sha256.cpp  Sha256.h  native-lib.cpp
app/src/main/java/com/example/hfc/: MainActivity.kt
app/src/main/java/com/example/hfc/calculate/: HashFunction.kt  MeasureTimeHashFunction.kt
app/src/main/java/com/example/hfc/data_models/: HashFunctionTimeDataModel.kt  ServiceTypes.kt
app/src/main/java/com/example/hfc/models/: HashFunctionTimeDataModel.kt  IMainModel.kt  MainModel.kt  ServiceTypes.kt
app/src/main/java/com/example/hfc/service/: CalculateService.kt  CalculateTimeCppService.kt  CalculateTimeKotlinService.kt
app/src/main/java/com/example/hfc/ui_compose/: MainScreen.kt  MainViewModel.kt
app/src/main/java/com/example/hfc/ui_screens/: MainScreen.kt  MainViewModel.kt  SplashScreen.kt
app/src/main/java/com/example/hfc/utils/: CalculateHashFunction.kt  Constanst.kt  Utils.kt  (+2 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/hfc/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+5 files in other folders)
